# pgone

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  justfile  pgone.db  sessions.json
.cursor/rules/: docs.mdc  zh.mdc
.github/workflows/: build.yml  macos-package.yml
intellid/: Cargo.toml
intellid-a2a/: Cargo.toml
intellid-apiserver/: Cargo.toml
intellid-apiserver/src/: lib.rs
intellid-gui/: Cargo.toml
intellid-gui/src/: lib.rs  main.rs  markdown.rs  mcp_client.rs  media.rs  models.rs  openai_client.rs  sql.rs
intellid-gui/src/components/: chat_panel.rs  context.rs  db_manager.rs  mod.rs  preview.rs  sessions_panel.rs  sql_panel.rs
intellid-gui/src/layout/: center_bottom.rs  center_top.rs  context.rs  left.rs  mod.rs  right.rs  tabs.rs
intellid-gui/src/ui/: center_bottom.rs  center_top.rs  left.rs  right.rs  tabs.rs
intellid-mcp-server/: Cargo.toml  README.md
intellid-mcp-server/examples/: stdio_server.rs
intellid-mcp-server/src/: config.rs  lib.rs  mcp.rs  registry.rs
intellid-mcp-server/src/adapters/: postgres.rs
intellid-mcp-server/src/core/: mod.rs  models.rs
intellid-mcp-server/src/formatters/: dbml.rs  markdown.rs  mermaid.rs  mod.rs
intellid-protocol/: Cargo.toml
intellid-storage/: Cargo.toml
intellid-storage/src/: blocking.rs  lib.rs  models.rs  schema.rs  storage.rs
intellid/src/: main.rs
pgone/: Cargo.toml  pgone.control
pgone-a2a/: Cargo.toml  README.md
pgone-a2a/src/: lib.rs  main.rs
pgone-agent/: Cargo.toml
pgone-agent/src/: lib.rs  provider.rs  runtime.rs  tools.rs
pgone-agent/src/tools/: complete_task.rs  execute_readonly_sql.rs  get_table.rs  health_check.rs  introspect_database.rs  list_databases.rs  list_routines.rs  list_triggers.rs  list_types.rs  mod.rs  preview_sql.rs  render_dbml.rs  render_er.rs  render_sql_result.rs
pgone-apiserver/: Cargo.toml  build.rs
pgone-apiserver/proto/: auditor.proto  proxy.proto
pgone-apiserver/src/: auditor.rs  grpc.rs  http.rs  lib.rs  main.rs  proxy.rs
pgone-auditor/: Cargo.toml
pgone-auditor/examples/: README.md
pgone-auditor/src/: main.rs  row_converter.rs  session.rs  sql_parser.rs
pgone-cli/: CHANGELOG.md  Cargo.toml  README.md
pgone-cli/src/: lib.rs  main.rs
pgone-gui/: Cargo.toml  build.rs
pgone-gui/assets/: icon.icns
pgone-gui/src/: futures.rs  layout_settings.rs  lib.rs  main.rs  markdown.rs  mcp.rs  mcp_client.rs  models.rs  notify.rs  openai_client.rs  prompt.rs  settings_store.rs  sql.rs  storage.rs  storage_handle.rs
pgone-gui/src/components/: chat_panel.rs  context.rs  db_manager.rs  db_tree.rs  export.rs  graph.rs  import.rs  mod.rs  preview.rs  results_table.rs  sessions_panel.rs  settings.rs  sql_panel.rs
pgone-gui/src/components/chats/: input_area.rs  message_list.rs  mod.rs  model_loader.rs  panel.rs  session_selector.rs
pgone-gui/src/components/sheets/: database_loader.rs  ddl_viewer.rs  executor.rs  json_viewer.rs  mod.rs  sql_draft.rs  sql_editor.rs  table_view.rs  utils.rs
pgone-gui/src/components/structures/: design.rs  dialogs.rs  loading.rs  mod.rs  operations.rs  types.rs  ui.rs  utils.rs
pgone-gui/src/layout/: context.rs  mod.rs  panels.rs  tabs.rs  windows.rs
pgone-gui/src/skeleton/: menu_bar.rs  mod.rs  panels.rs  status_bar.rs  windows.rs
pgone-gui/src/skeletons/: dock.rs  menu_bar.rs  mod.rs  panels.rs  status_bar.rs  windows.rs
pgone-gui/src/skeletons/formatters/: json.rs  md.rs  mod.rs  toml.rs  yaml.rs
pgone-gui/src/skeletons/monitors/: activity.rs  bgwriter.rs  indexes.rs  locks.rs  mod.rs  replication.rs  statements.rs  tables.rs  window.rs
pgone-gui/src/styles/: media.rs  mod.rs  toggle.rs
pgone-llm/: Cargo.toml  README.md
pgone-llm/src/: audio.rs  audit.rs  chat.rs  config.rs  embeddings.rs  error.rs  files.rs  images.rs  lib.rs  models.rs  tools.rs
pgone-llm/src/providers/: gemini.rs  mod.rs  ollama.rs  openrouter.rs
pgone-mcp/: Cargo.toml  README.md
pgone-mcp-client/: Cargo.toml
pgone-mcp-client/src/: lib.rs
pgone-mcp-server/: Cargo.toml  README.md
pgone-mcp-server/examples/: connections.yaml  stdio_server.rs
pgone-mcp-server/src/: lib.rs  main.rs  mcp.rs
pgone-mcp-server/src/adapters/: postgres.rs
pgone-mcp/examples/: stdio_server.rs
pgone-mcp/src/: adapter.rs  client.rs  lib.rs  main.rs  mcp.rs
pgone-mcp/src/core/: introspector.rs
pgone-mcp/src/formatters/: markdown.rs  mermaid.rs
pgone-protocol/: Cargo.toml
pgone-protocol/src/: lib.rs  proxy.rs
pgone-proxy/: Cargo.toml
pgone-proxy/examples/: simple_query.rs
pgone-proxy/src/: dsn_extractor.rs  extractor.rs  lib.rs  main.rs  processor.rs  replay.rs  row_converter.rs  server.rs  session.rs  sql_parser.rs  type_converter.rs
pgone-sql/: Cargo.toml
pgone-sql/src/: database.rs  error.rs  function.rs  lib.rs  models.rs  schema.rs  session.rs  table.rs  trigger.rs  user.rs  view.rs
pgone-sql/tests/: README.md  integration_test.rs
pgone-storage/: Cargo.toml
pgone-storage/src/: blocking.rs  file_sys.rs  lib.rs  models.rs  query.rs  schema.rs  service.rs  storage.rs
pgone-util/: Cargo.toml
pgone-util/src/: ai.rs  lib.rs  log.rs
pgone-util/src/llm/: audio.rs  chat.rs  config.rs  embeddings.rs  error.rs  files.rs  images.rs  mod.rs  models.rs
pgone-vector/: Cargo.toml
pgone-vector/src/: error.rs  lib.rs  store.rs  table.rs  types.rs
pgone/src/: lib.rs  main.rs
pgone/tests/pg_regress/expected/: setup.out
scripts/macos/: Info.plist.template  build_app.sh  package_dmg.sh
