[workspace]
members = [
    "pgone-a2a",
    "pgone-apiserver",
    "pgone-gui",
    "pgone-storage",
    "pgone-mcp-server",
    "pgone-protocol",
]

resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23.0"
tokio-util = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = { version = "0.8", features = ["derive", "chrono"] }
anyhow = "1"
thiserror = "2.0.11"
lazy_static = "1.5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
maplit = { version = "1.0.2" }
reqwest = { version = "0.12.23", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
futures-util = "0.3"
bytes = "1"
once_cell = "1.20.3"
rand = "0.8"
axum = { version = "0.8.1" }
async-trait = "0.1"
moka = { version = "0.12", features = ["future"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres"] }
prometheus-client = "0.23.1"
prometheus-client-derive-encode = { version = "0.4.2" }
strum = { version = "0.27", features = ["derive"] }
sqlparser = { version = "0.59.0" }
pgwire = { version = "0.35.0" }
bb8-postgres = "0.9.0"
tokio-postgres = "0.7"

# Turso/libsql for local embedded storage
libsql = { version = "0.4" }
turso = { version = "0.1.5" }

pgone-mcp-server = { path = "pgone-mcp-server" }
pgone-gui = { path = "pgone-gui" }
pgone-protocol = { path = "pgone-protocol" }
pgone-storage = { path = "pgone-storage" }
pgone-apiserver = { path = "pgone-apiserver" }