[workspace.metadata]
version = "0.1.0"
edition = "2024"
author = "zhubby <yanvalue@gmail.com>"
description = "PGone is a suite of tools for PostgreSQL"
repository = "https://github.com/zhubby/pgone"
license = "Apache-2.0"
homepage = "https://pgone.io"
documentation = "https://pgone.io/docs"
keywords = ["postgresql", "database", "tools", "mcp", "gui"]
categories = ["database", "tools", "mcp", "gui"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["zhubby <yanvalue@gmail.com>"]
description = "PGone is a suite of tools for PostgreSQL"
repository = "https://github.com/zhubby/pgone"
license = "Apache-2.0"
homepage = "https://pgone.io"
documentation = "https://pgone.io/docs"
keywords = ["postgresql", "database", "tools", "mcp", "gui"]
categories = ["database", "tools", "mcp", "gui"]

[workspace]
default-members = ["pgone-cli"]
members = [
    "pgone-apiserver",
    "pgone-gui",
    "pgone-storage",
    "pgone-mcp",
    "pgone-proxy",
    "pgone-util",
    "pgone-sql",
    "pgone-agent",
    "pgone-llm",
    "pgone-vector",
    "pgone-cli",
    "pgone",
]

resolver = "2"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

[patch.crates-io]
catppuccin-egui = { path = "vendor/catppuccin-egui" }
egui-data-table = { path = "vendor/egui-data-table" }
egui-snarl = { path = "vendor/egui-snarl" }

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23.0"
tokio-util = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = { version = "0.8", features = ["derive", "chrono"] }
anyhow = "1"
thiserror = "2.0.11"
lazy_static = "1.5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
maplit = { version = "1.0.2" }
reqwest = { version = "0.12.23", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
futures-util = "0.3"
bytes = "1"
once_cell = "1.20.3"
rand = "0.8"
axum = { version = "0.8.1" }
async-trait = "0.1"
moka = { version = "0.12", features = ["future"] }
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
] }
prometheus-client = "0.23.1"
prometheus-client-derive-encode = { version = "0.4.2" }
strum = { version = "0.27", features = ["derive"] }
sqlparser = { version = "0.59.0" }
pgwire = { version = "0.35.0" }
bb8-postgres = "0.9.0"
tokio-postgres = "0.7"
opentelemetry = "0.31"
opentelemetry_sdk = "0.31"
tracing-opentelemetry = "0.32"
rmcp = { version = "0.10.0" }
rig-core = "0.25.0"

# Turso/libsql for local embedded storage
libsql = { version = "0.4" }
turso = { version = "0.1.5" }
etl = { git = "https://github.com/supabase/etl" }

pgone-mcp = { path = "pgone-mcp" }
pgone-gui = { path = "pgone-gui" }
pgone-proxy = { path = "pgone-proxy" }
pgone-storage = { path = "pgone-storage" }
pgone-apiserver = { path = "pgone-apiserver" }
pgone-cli = { path = "pgone-cli" }
pgone-util = { path = "pgone-util" }
pgone-sql = { path = "pgone-sql" }
pgone-llm = { path = "pgone-llm" }
