[workspace.metadata]
version = "0.1.0"
edition = "2024"
author = "zhubby <yanvalue@gmail.com>"
description = "PGone is a suite of tools for PostgreSQL"
repository = "https://github.com/zhubby/pgone"
license = "Apache-2.0"
homepage = "https://pgone.io"
documentation = "https://pgone.io/docs"
keywords = ["postgresql", "database", "tools", "mcp", "gui"]
categories = ["database", "tools", "mcp", "gui"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["zhubby <yanvalue@gmail.com>"]
description = "PGone is a suite of tools for PostgreSQL"
repository = "https://github.com/zhubby/pgone"
license = "Apache-2.0"
homepage = "https://pgone.io"
documentation = "https://pgone.io/docs"
keywords = ["postgresql", "database", "tools", "mcp", "gui"]
categories = ["database", "tools", "mcp", "gui"]

[workspace]
default-members = ["pgone-cli"]
members = [
    "pgone-gui",
    "pgone-storage",
    "pgone-mcp",
    "pgone-util",
    "pgone-sql",
    "pgone-agent",
    "pgone-llm",
    "pgone-vector",
    "pgone-cli",
]

resolver = "2"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23.0"
tokio-util = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
schemars = { version = "0.8", features = ["derive", "chrono"] }
anyhow = "1"
thiserror = "2.0.11"
lazy_static = "1.5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
maplit = { version = "1.0.2" }
reqwest = { version = "0.12.23", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
bytes = "1"
once_cell = "1.20.3"
rand = "0.8"
axum = { version = "0.8.1" }
async-trait = "0.1"
async-openai = "0.30.1"
async-stream = "0.3"
moka = { version = "0.12", features = ["future"] }
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
] }
strum = { version = "0.27", features = ["derive"] }
sqlparser = "0.48"
bb8-postgres = "0.9.0"
tokio-postgres = "0.7"
opentelemetry = "0.31"
opentelemetry_sdk = "0.31"
tracing-opentelemetry = "0.32"
rmcp = { version = "0.10.0" }
rig-core = "0.25.0"
rig-lancedb = "0.2.28"
lancedb = "0.22.3"
arrow = "56.2.0"
gemini-rust = "1.5.1"
egui_dock = "0.19"
egui = { version = "0.34.2", default-features = false }
eframe = "0.34.2"
egui_extras = "0.34.2"
emath = { version = "0.34.2", default-features = false }
ecolor = { version = "0.34.2", default-features = false }
epaint = { version = "0.34.2", default-features = false }
egui_plot = { version = "0.35.0", default-features = false }
egui_commonmark = "0.23"
epaint_default_fonts = "0.34.2"
egui_table = "0.8.0"
egui-phosphor = "0.12"
egui-notify = "0.22"
image = { version = "0.25", default-features = false }
webbrowser = "1"
rfd = "0.15"
open = "5"
hex = "0.4"
csv = "1"
urlencoding = "2"
url = "2.5"
icns = "0.3.1"
poll-promise = "0.3"
sea-query = "1.0.0-rc.1"
sysinfo = "0.37.2"
regex = "1"
infer = "0.15"

# Turso/libsql for local embedded storage
libsql = { version = "0.4" }
turso = { version = "0.1.5" }
etl = { git = "https://github.com/supabase/etl" }

pgone-mcp = { path = "pgone-mcp" }
pgone-gui = { path = "pgone-gui" }
pgone-storage = { path = "pgone-storage" }
pgone-cli = { path = "pgone-cli" }
pgone-util = { path = "pgone-util" }
pgone-sql = { path = "pgone-sql" }
pgone-llm = { path = "pgone-llm" }
pgone-agent = { path = "pgone-agent" }
pgone-vector = { path = "pgone-vector" }
