[package]
name = "intellid-apiserver"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
intellid-storage = { workspace = true }
base64 = "0.22"
sha2 = "0.10"
urlencoding = "2"

# Prometheus metrics
prometheus-client = { workspace = true }
prometheus-client-derive-encode = { workspace = true }

# Middleware & utils
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "timeout", "util"] }
http = "1"
hyper = { version = "1", features = ["http1", "http2", "server"] }
once_cell = "1.20.3"

# OpenAPI/Swagger
utoipa = { version = "5", features = ["axum_extras", "chrono", "preserve_order"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
