[package]
name = "intellid-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
emath = { version = "0.32.3", default-features = false }
ecolor = { version = "0.32.3", default-features = false }
epaint = { version = "0.32.3", default-features = false }
epaint_default_fonts = { version = "0.32.3" }
egui = { version = "0.32.3", default-features = false }
eframe = { version = "0.32.3" }
egui_extras = { version = "0.32.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
image = "0.25"
webbrowser = "1"
rfd = "0.15"
open = "5"
pulldown-cmark = "0.12"
sqlparser = "0.48"
tokio = { workspace = true }
sqlx = { workspace = true }
hex = "0.4"
csv = "1"
async-openai = "0.25"
intellid-storage = { workspace = true }