[package]
name = "pgone-a2a"
version = "0.1.0"
edition = "2024"
description = "A2A protocol agent tool for PostgreSQL schema queries"
repository = "https://github.com/zhubby/pgone"
license = "MIT"
homepage = "https://pgone.io"
documentation = "https://pgone.io/docs"
keywords = ["postgresql", "database", "tools", "a2a", "agent"]
categories = ["database", "tools"]

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
pgone-mcp = { workspace = true }
pgone-sql = { workspace = true }

[[bin]]
name = "pgone-a2a"
path = "src/main.rs"
