[package]
name = "pgone-apiserver"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
pgone-storage = { workspace = true }
pgone-proxy = { workspace = true }
pgone-util = { workspace = true }
clap = { workspace = true }
base64 = "0.22"
sha2 = "0.10"
urlencoding = "2"

# Prometheus metrics
prometheus-client = { workspace = true }
prometheus-client-derive-encode = { workspace = true }

# Middleware & utils
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "timeout", "util"] }
http = "1"
hyper = { version = "1", features = ["http1", "http2", "server"] }
once_cell = "1.20.3"

# OpenAPI/Swagger
utoipa = { version = "5", features = ["axum_extras", "chrono", "preserve_order"] }
utoipa-swagger-ui = { version = "8", default-features = false, features = [
    "axum",
    "vendored",
] }

# gRPC
tonic = "0.12"
tonic-build = { version = "0.12", features = ["prost"] }
prost = "0.13"
prost-types = "0.13"

# PostgreSQL
tokio-postgres = { workspace = true }

[build-dependencies]
tonic-build = { version = "0.12", features = ["prost"] }

[[bin]]
name = "pgone-apiserver"
path = "src/main.rs"
