[package]
name = "pgone-gui"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[[bin]]
name = "pgone-gui"
path = "src/main.rs"

[dependencies]
egui = { workspace = true }
eframe = { workspace = true }
egui_extras = { workspace = true }
emath = { workspace = true }
ecolor = { workspace = true }
epaint = { workspace = true }
egui_plot = { workspace = true }
egui_commonmark = { workspace = true, features = [
    "svg",
    "fetch",
    "better_syntax_highlighting",
    "embedded_image",
] }
epaint_default_fonts = { workspace = true }
egui-phosphor = { workspace = true }
egui-notify = { workspace = true }
egui_dock = { workspace = true }
egui-theme-switch = { workspace = true }
egui-file-dialog = { workspace = true }
egui_json_tree = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
image = { workspace = true, features = ["png"] }
webbrowser = { workspace = true }
rfd = { workspace = true }
open = { workspace = true }
raw-window-handle = { workspace = true }
sqlparser = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
sqlx = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
futures-core = { workspace = true }
hex = { workspace = true }
csv = { workspace = true }
urlencoding = { workspace = true }
url = { workspace = true }
icns = { workspace = true }
anyhow = { workspace = true }
strum = { workspace = true }
reqwest = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
poll-promise = { workspace = true }
once_cell = { workspace = true }
sea-query = { workspace = true }
sysinfo = { workspace = true }
regex = { workspace = true }


pgone-sql = { workspace = true }
pgone-util = { workspace = true }
pgone-agent = { workspace = true }
pgone-storage = { workspace = true }
pgone-mcp = { workspace = true }
rmcp = { workspace = true, features = ["client", "transport-async-rw"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", features = ["NSView", "NSWindow"], default-features = false }

[build-dependencies]
vergen-gitcl = { workspace = true, features = ["build"] }

# Add the following configuration
[package.metadata.bundle]
name = "PGone"
identifier = "com.github.zhubby"
icon = ["assets/icon.icns"]
version = "0.1.0"
copyright = "Copyright 2025 zhubby"
category = "Developer Tool"
short_description = "PGone is a suite of tools for PostgreSQL"
resources = ["assets/icon.icns", "assets/fonts/*.ttf"]
