[package]
name = "pgone-llm"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
async-openai = "0.30.1"
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
futures = { workspace = true }
async-stream = "0.3"
reqwest = { workspace = true }
gemini-rust = "1.5.1"
strum = { workspace = true }
tracing = { workspace = true }
rig-core = { workspace = true }

rmcp = { workspace = true }
pgone-storage = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
