[package]
name = "pgone-llm"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
async-openai = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
reqwest = { workspace = true }
gemini-rust = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
rig-core = { workspace = true }

rmcp = { workspace = true }
pgone-storage = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
