[package]
name = "pgone-mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "io-std", "io-util"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
async-trait = "0.1"
moka = { version = "0.12", features = ["future"] }
once_cell = { workspace = true }
