[package]
name = "pgone-mcp-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pgone-mcp-server"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "io-std", "io-util"] }
sqlx = { workspace = true, default-features = false, features = ["runtime-tokio-rustls", "postgres"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
async-trait = "0.1"
moka = { version = "0.12", features = ["future"] }
once_cell = { workspace = true }
clap = { workspace = true }
pgone-util = { workspace = true }
