[package]
name = "pgone-mcp-server"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[[bin]]
name = "pgone-mcp-server"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
sqlx = { workspace = true, default-features = false, features = ["runtime-tokio-rustls", "postgres"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
async-trait = { workspace = true }
moka = { version = "0.12", features = ["future"] }
once_cell = { workspace = true }
clap = { workspace = true }
pgone-util = { workspace = true }
pgone-sql = { workspace = true }
pgone-storage = { workspace = true }
rmcp = { version = "0.10.0", features = ["transport-sse-server","transport-streamable-http-server"] }
axum = { workspace = true }
tokio-util = { workspace = true }