[package]
name = "pgone-mcp"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[[bin]]
name = "pgone-mcp-server"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
async-trait = { workspace = true }
once_cell = { workspace = true }
clap = { workspace = true }
pgone-util = { workspace = true }
pgone-sql = { workspace = true }
pgone-storage = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
rmcp = { workspace = true, features = [
    "client",
    "transport-sse-client",
    "transport-streamable-http-client",
    "transport-async-rw",
    "transport-sse-server",
    "transport-streamable-http-server",
] }
axum = { workspace = true }
tokio-util = { workspace = true }
