[package]
name = "pgone-proxy"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
pgwire = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
sqlparser = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-postgres = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
pgone-util = { workspace = true }

[[bin]]
name = "pgone-proxy"
path = "src/main.rs"