[package]
name = "pgone-storage"
version = "0.1.0"
edition = "2024"

[features]
default = ["backend-libsql"]
backend-turso = ["dep:turso"]
backend-libsql = ["dep:libsql"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
libsql = { workspace = true, optional = true }
turso = { workspace = true, optional = true }
