[package]
name = "pgone-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["backend-libsql"]
backend-turso = ["dep:turso"]
backend-libsql = ["dep:libsql"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
infer = { workspace = true }
libsql = { workspace = true, optional = true }
turso = { workspace = true, optional = true }
sea-query = { workspace = true, features = [
    "backend-sqlite",
    "derive",
    "with-chrono",
    "with-json",
] }
