[package]
name = "pgone-util"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter", "json", "ansi", "chrono"] }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }
anyhow = { workspace = true }
async-openai = "0.30.1"
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
async-stream = "0.3"
reqwest = { workspace = true }
