[package]
name = "pgone-util"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter", "json", "ansi", "chrono"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
