[package]
name = "pgone-vector"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
lancedb = "0.22.3"
rig-lancedb = "0.2.28"
rig-core = { workspace = true }
