[package]
name = "pgone-vector"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
lancedb = "0.22.3"
rig-lancedb = "0.2.28"
rig-core = { workspace = true }
pgone-storage = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
arrow = "56.2.0"
futures-util = { workspace = true }
tokio = { workspace = true, features = ["full"] }
