[package]
name = "pgone-vector"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
lancedb = { workspace = true }
rig-lancedb = { workspace = true }
rig-core = { workspace = true }
pgone-storage = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
arrow = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
