[package]
name = "pgone"
version = "0.1.0"
edition = "2024"

[dependencies]
pgone-mcp-server = { workspace = true}
pgone-gui = { workspace = true}
pgone-protocol = { workspace = true}


serde_json = { workspace = true}
serde = { workspace = true}
tokio = { workspace = true}
sqlx = { workspace = true}
moka = { workspace = true}
once_cell = { workspace = true}
async-trait = { workspace = true}
tracing = { workspace = true}
tracing-subscriber = { workspace = true}
anyhow = { workspace = true}